--- a/index.html
+++ b/index.html
@@ -322,24 +322,24 @@
       <table class="contenedortabla">
     <thead>  
       <tr><!--columnas abajo-->
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="p2.jpg" height="100px" width="100px" alt=""></a></td>
-        <td><img src="p2.jpg" height="100px" width="100px"></td>
-        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" class="unimg" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/2.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/3.jpg" height="100px" width="100px" class="tresimg" alt=""></a></td><!--td derecha filas--->
     </thead>
       <tr>
-        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
-        <td><img src="p2.jpg" height="100px" width="100px"></td>
-        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/4.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/5.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/6.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
-        <td><img src="p2.jpg" height="100px" width="100px"></td>
-        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/7.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/8.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/9.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
-        <td><img src="p2.jpg" height="100px" width="100px"></td>
-        <td><img src="p2.jpg" height="100px" width="100px"></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/10.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/11.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       </table> 
 <!----------final tabla---------------->
