--- a/index.html
+++ b/index.html
@@ -315,8 +315,14 @@
   <!----------------inicio de pagina---------------->
   <div class="contenedor">
     <head>
-    <h1><center><p1 class="titulo">CORTE Y grabado</p1><p class="titulo">LASER</p></center></h1>
-    <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
+      <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
+               <!----------------------->
+               <div class="ad-container" id="adContainer">
+                <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
+                </div>
+      <!--------------------------------------------------------------------->
+    <center><p1 class="titulo2">CORTE GRABADO</p1></center>
+    <center><p class="titulo2">LASER</p></center>
     </head>
 <!----------tabla---------------->
       <table class="contenedortabla">
@@ -341,13 +347,24 @@
         <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/11.jpg" height="100px" width="100px" alt=""></a></td>
         <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
+      <tr>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/4.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/5.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/6.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/7.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/8.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/9.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/10.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/11.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
       </table> 
 <!----------final tabla---------------->
-         <!----------------------->
-          <div class="ad-container" id="adContainer">
-          <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
-          </div>
-<!--------------------------------------------------------------------->
+
     </section>
     </div>
     <audio id="son1" loop>
