--- a/index.html
+++ b/index.html
@@ -316,13 +316,13 @@
   <div class="contenedor">
     <head>
       <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
-               <!----------------------->
-               <div class="ad-container" id="adContainer">
-                <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
-                </div>
-      <!--------------------------------------------------------------------->
-    <center><p1 class="titulo2">CORTE GRABADO</p1></center>
-    <center><p class="titulo2">LASER</p></center>
+    <center><p class="titulo2">CORTE GRABADO</p></center>
+    <center><p class="titulo3">LASER</p></center>
+   <!----------------------->
+    <div class="ad-container" id="adContainer">
+    <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
+   </div>
+   <!--------------------------------------------------------------------->
     </head>
 <!----------tabla---------------->
       <table class="contenedortabla">
@@ -338,9 +338,9 @@
         <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/6.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/7.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/8.jpg" height="100px" width="100px" alt=""></a></td>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/9.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/7.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/8.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/9.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
         <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/10.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
@@ -348,9 +348,9 @@
         <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/4.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/5.jpg" height="100px" width="100px" alt=""></a></td>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/6.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/4.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/5.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/6.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
         <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/7.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
@@ -358,9 +358,9 @@
         <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/9.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/10.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/11.jpg" height="100px" width="100px" alt=""></a></td>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/10.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/11.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       </table> 
 <!----------final tabla---------------->
