--- a/index.html
+++ b/index.html
@@ -318,9 +318,12 @@
       <h3 class="BIENVENIDO">B I E N V E N I D O</h3>
     <center><p class="titulo2">CORTE GRABADO</p></center>
     <center><p class="titulo3">LASER</p></center>
+    <div class="marquee">
+      <p>BETA BETA BETA BETA BETA BETA BETA BETA BETA BETA</p>
+    </div>
    <!----------------------->
     <div class="ad-container" id="adContainer">
-    <img src="imgproductos/1.jpg" alt="Anuncio publicitario" id="adImage">
+    <img src="1.jpg" alt="Anuncio publicitario" id="adImage">
    </div>
    <!--------------------------------------------------------------------->
     </head>
@@ -328,39 +331,89 @@
       <table class="contenedortabla">
     <thead>  
       <tr><!--columnas abajo-->
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" class="unimg" alt=""></a></td>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/2.jpg" height="100px" width="100px" alt=""></a></td>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/3.jpg" height="100px" width="100px" class="tresimg" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/1.jpg" height="100px" width="100px" class="unimg" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/2.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/3.jpg" height="100px" width="100px" class="tresimg" alt=""></a></td><!--td derecha filas--->
     </thead>
       <tr>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/4.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/5.jpg" height="100px" width="100px" alt=""></a></td>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/6.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/4.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/5.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/6.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/7.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/8.jpg" height="100px" width="100px" alt=""></a></td>
-        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/9.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/7.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/8.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin3"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/9.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/10.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/11.jpg" height="100px" width="100px" alt=""></a></td>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/10.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/11.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/12.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/4.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/5.jpg" height="100px" width="100px" alt=""></a></td>
-        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/6.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/13.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/14.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin5"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/15.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/7.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/8.jpg" height="100px" width="100px" alt=""></a></td>
-        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/9.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/16.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/17.jpg" height="100px" width="100px" alt=""></a></td>
+        <td><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/18.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       <tr>
-        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/10.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
-        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/11.jpg" height="100px" width="100px" alt=""></a></td>
-        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="imgproductos/1.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/19.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/20.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/21.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/22.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/23.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/24.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/25.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/26.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/27.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/28.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/29.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/30.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/31.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/32.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/33.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/34.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/35.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/36.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/37.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/38.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/39.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/40.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/41.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/42.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/43.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/44.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/45.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/46.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/47.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/48.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+      </tr>
+      <tr>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/49.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/50.jpg" height="100px" width="100px" alt=""></a></td>
+        <td class="lin7"><a href="https://api.whatsapp.com/send?phone=5631927557&text=hola, quiero comprar tu producto!"><img src="img/51.jpg" height="100px" width="100px" alt=""></a></td><!--td derecha filas--->
       </tr>
       </table> 
 <!----------final tabla---------------->
